added basic calculator skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <script src="java.js"></script> 
 </head>
 <body>
+    <div class="container">
+        <div class="display">
+            dummy text
+        </div>
+        <div class="digitContain">
+            <div class="digits others">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>0</button>
+            </div>
+            <div class="others digits">
+                <button>+</button>
+                <button>-</button>
+                <button>x</button>
+                <button>÷</button>
+                <button>=</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
